been working around to make these work
NOTE (ignore the .test package) its just for testing stuff)
@SkylerTyler1337  TODO fix just parsing one file instead of all the
map.xml's

--- a/plugin.yml
+++ b/plugin.yml
@@ -2,6 +2,8 @@ name: Scrimmage4
 main: me.skylertyler.scrimmage.Scrimmage
 version: 0.5
 commands:
+  participating:
+    description: checks
   cycle:
     description: cycle to the next map!
   myworld:
@@ -9,7 +11,7 @@ commands:
     aliases:
     - 'mw'
   region:
-    description: checking!
+    description: checks if a region has name!
   regions:
     description: tells you all the regions in the </region> tag!
   location:
