uh somewhat of a rotation -_-
(need to try to fix the MapLoader still)

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,11 @@
 name: Scrimmage4
 main: me.skylertyler.scrimmage.Scrimmage
-version: 0.5
+version: 0.58
 commands:
+  rotation:
+    description: map rotation!
+  maplist:
+    description: all the loaded maps!
   participating:
     description: checks
   cycle:
