working on KitModule and SpawnModule
TODO the rest of the spawnModule (fix KitModule)

--- a/plugin.yml
+++ b/plugin.yml
@@ -7,6 +7,8 @@ commands:
     aliases:
     - 'bmessage'
     - 'bm'
+  kit:
+    description: kit
   rotation:
     description: map rotation!
   maplist:
