--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: Scrimmage4
 main: me.skylertyler.scrimmage.Scrimmage
-version: 0.9
+version: 1.0
 commands:
   authors:
     description: authors!
@@ -9,6 +9,10 @@ commands:
     aliases:
     - 'bmessage'
     - 'bm'
+  g:
+    description: global channel
+  t: 
+    description: team channel
   kit:
     description: kit
   rotation:
