--- a/plugin.yml
+++ b/plugin.yml
@@ -14,6 +14,8 @@ commands:
     aliases:
     - 'bmessage'
     - 'bm'
+  a:
+    description: admin channel
   g:
     description: global channel
   t: 
