--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/tylern/Desktop/server/sportbukkit.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry kind="lib" path="C:/Users/tylern/Desktop/server/libs/jsoup.jar"/>
+	<classpathentry kind="lib" path="C:/Users/tylern/Desktop/server/libs/Overcast Network API.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
