--- a/plugin.yml
+++ b/plugin.yml
@@ -1,9 +1,9 @@
 name: Scrimmage4
 main: me.skylertyler.scrimmage.Scrimmage
 version: 1.0
-commands:
+commands: 
   mystats:
-    description: your current OCN stats
+    description: ocn stats
   mychannel:
     description: tells you what channel you're in.
     aliases:
