--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,9 @@
 name: Scrimmage4
 main: me.skylertyler.scrimmage.Scrimmage
-version: 1.0
+version: 1.2
 commands: 
+  filters:
+    description: testing filters
   contains:
     description: check if a region exist!
   mychannel:
